--- a/OUIKit/OUIConversation/build.gradle
+++ b/OUIKit/OUIConversation/build.gradle
@@ -63,7 +63,9 @@ dependencies {
     implementation 'com.airbnb.android:lottie:5.0.3'
     implementation 'cjt.library.wheel:camera:1.1.9'
     implementation 'cn.jzvd:jiaozivideoplayer:7.7.0'
-
+    implementation 'io.openim:android-sdk:latest@aar'
+    implementation 'io.openim:core-sdk:latest@aar'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
     implementation 'com.alibaba:arouter-api:1.5.2'
     annotationProcessor 'com.alibaba:arouter-compiler:1.5.2'
